apps/fleet-api/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fleet-api
  namespace: fleetops
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - fleet-api.20.74.114.10.nip.io
      secretName: fleet-api-tls
  rules:
    - host: fleet-api.20.74.114.10.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fleet-api
                port:
                  number: 8000
